feat: start user auth

--- a/rs-shop-app/src/index.html
+++ b/rs-shop-app/src/index.html
@@ -25,6 +25,8 @@
     integrity="sha512-oHBLR38hkpOtf4dW75gdfO7VhEKg2fsitvHZYHZjObc4BPKou2PGenyxA5ZJ8CCqWytBx5wpiSqwVEBy84b7tw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
